DEV-837 Fix block spacing on project detail page

--- a/src/Unilend/Bundle/FrontBundle/Resources/src/sass/site/components/project/_single.scss
+++ b/src/Unilend/Bundle/FrontBundle/Resources/src/sass/site/components/project/_single.scss
@@ -726,10 +726,18 @@
   }
 }
 .project-single-content {
-  .page-section.separate {
-    border-bottom:2px solid #eceaed;
-    padding-bottom:70px;
-    margin-bottom:20px;
+  .page-section {
+    padding-bottom: 50px;
+    padding-top: 30px;
+
+    &.separate {
+      border-bottom: 2px solid #eceaed;
+      margin-bottom: 30px;
+    }
+
+    > h3 {
+      margin-top: 0;
+    }
   }
 }
 
